--- a/assets/css/ar.scss
+++ b/assets/css/ar.scss
@@ -100,6 +100,10 @@ body {
 	width: 100%;
 	height: 100vh;
 	margin: 0!important;
+	margin-top: 0!important;
+	margin-right: 0!important;
+	margin-bottom: 0!important;
+	margin-left: 0!important;
 }
 
 .loader {
